--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-
+        <div class="container">
+            <div class="search-wrapper">
+                <input type="text" id="country-input" placeholder="Enter country name here ..">
+                <button id="search-btn">Search</button>
+            </div>
+            <div id="result"></div>
+        </div>
         <script src="script.js"></script>
     </body>
 </html>
