--- a/index.html
+++ b/index.html
@@ -5,15 +5,38 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Country Guide</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="icon" type="image/x-icon" href="./image/earth.png">
+        <link rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+            integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+            crossorigin="anonymous">
+        <link rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     </head>
     <body>
-        <div class="container">
+        <div
+            class="container d-flex align-items-center justify-content-between mt-5">
+            <div class="header-container px-5 py-4">
+                <p class="text-white font-weight-light mb-1">Country guide</p>
+                <div class="input-group">
+                    <input type="text"
+                        placeholder="Enter country name here ..."
+                        aria-label="Recipient's username"
+                        aria-describedby="basic-addon2">
+                </div>
+            </div>
+            <div class="button-container px-5">
+                <button type="button"
+                    class="btn search-btn font-weight-light px-3 py-2"><i class="bi bi-search mr-1"></i> Search</button>
+            </div>
+        </div>
+        <!-- <div class="container">
             <div class="search-wrapper">
                 <input type="text" id="country-input" placeholder="Enter country name here ..">
                 <button id="search-btn">Search</button>
             </div>
             <div id="result"></div>
-        </div>
+        </div> -->
         <script src="script.js"></script>
     </body>
 </html>
